[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splusplus"
version = "2.0.0"
description = "S++ Memory System - Cognitive Fabric for AGI"
authors = [{ name = "Falcon / IRE Digital", email = "falcon@iredigital.com" }]
readme = "README.md"
license = { text = "ISC" }
requires-python = ">=3.9"
dependencies = [
    "psutil>=5.9",
    "numpy>=1.24",
    "aiohttp>=3.9",
    "cryptography>=41.0",
    "aiodns>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
]
hermes = [
    "anthropic>=0.20",
    "fastapi>=0.100",
    "uvicorn>=0.23",
]
browser = [
    "playwright>=1.40",
]
postgres = [
    "psycopg2-binary>=2.9",
]
full = [
    "splusplus[dev,hermes,browser,postgres]",
    "fastembed>=0.1",
    "scikit-learn>=1.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["splusplus*"]

[tool.setuptools.package-data]
"splusplus" = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
